# Feature-based-knowledge-distillation

./: .gitignore  README.md  action_plan.md  pyproject.toml  requirements.txt  sync_cluster.ps1
cluster/: aliases.sh  chain_next.sh  check_offline_assets.sh  clean.sh  queue_next.sh  queue_watch.sh  setup.sh  submit_train.sh  train.sh
configs/: at_kd.yaml  fitnet_deep_s1.yaml  fitnet_deep_s2.yaml  fitnet_full_s1.yaml  fitnet_full_s2.yaml  fitnet_middle_s1.yaml  fitnet_middle_s2.yaml  phase1_baseline.yaml  phase2_kd.yaml  teacher_finetune.yaml
scripts/: download_offline_assets.py  run_at.py  run_fitnet_stage1.py  run_fitnet_stage2.py  run_phase1_baseline.py  run_phase2_kd.py  run_teacher_finetune.py  setup_venv.sh
src/: __init__.py
src/models/: __init__.py  baseline.py  distillation_utils.py  student.py  teacher.py
src/training/: __init__.py  attention_utils.py  loss.py  metrics.py  train_at.py  train_baseline.py  train_fitnet_stage1.py  train_fitnet_stage2.py  train_kd.py  train_teacher_finetune.py
src/utils/: __init__.py  checkpoint.py  config.py  logging.py  metrics_jsonl.py  monitor_metrics.py  seed.py  training_summary.py
