[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dl-project"
version = "0.1.0"
description = "Feature-based Knowledge Distillation Project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "numpy",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "PyYAML",
    "tensorboard",
    "tqdm",
    "rich"
]

[tool.setuptools.packages.find]
where = ["."]